--- a/index.html
+++ b/index.html
@@ -65,20 +65,20 @@
       <div class="card">
         <h2 data-i18n="h_education">Formación Académica</h2>
         <ul>
-          <li>Tecnicatura en Ciencias de Datos e Inteligencia Artificial (2022–2025)</li>
-          <li>Tecnicatura en Desarrollo Web y Aplicaciones Digitales (2022–2024)</li>
-          <li>Secundario completo (2004)</li>
+          <li data-i18n="TCDIA" title="2023–2025 | Instituto Superior Politécnico de Córdoba, Córdoba, Argentina">CDIA</li>
+          <li data-i18n="TDWAD" title="2022–2024 | Instituto Superior Politécnico de Córdoba, Córdoba, Argentina">Tecnicatura en Desarrollo Web y Aplicaciones Digitales (2022–2024)</li>
+          <li data-i18n="Secundario" title="2004 | Colegio María Auxiliadora, San Juan, Argentina">Secundario completo (2004)</li>
         </ul>
       </div>
       <div class="card">
         <h2 data-i18n="courses">Cursos Realizados</h2>
         <ul class="courses">
-          <li><i class="fas fa-check-circle text-green"></i> TESTING QA - Codo a Codo (2022)</li>
-          <li><i class="fas fa-code text-blue"></i> Node.js - Codo a Codo (2022)</li>
-          <li><i class="fas fa-database text-purple"></i> Fundamentos Python - CISCO (2022)</li>
-          <li><i class="fas fa-paint-brush text-pink"></i> UI/UX FOLCADEMY (2021)</li>
-          <li><i class="fas fa-laptop-code text-orange"></i> Desarrollo Web - San Juan Tec (2021)</li>
-          <li><i class="fas fa-server text-teal"></i> Backend con JS - San Juan Tec (2021)</li>
+          <li data-i18n="testing" title="2022 | Codo a Codo"><i class="fas fa-check-circle text-green"></i></li>
+          <li data-i18n="node" title="2022 | Codo a Codo"><i class="fas fa-code text-blue"></i></li>
+          <li data-i18n="python"  title="2022 | CISCO"><i class="fas fa-database text-purple"></i></li>
+          <li data-i18n="ui" title="2021 | FOLCADEMY"><i class="fas fa-paint-brush text-pink"></i></li>
+          <li data-i18n="desarrollo" title="2021 | San Juan TEC"><i class="fas fa-laptop-code text-orange"></i></li>
+          <li data-i18n="back" title="2021 | San Juan TEC"><i class="fas fa-server text-teal"></i> </li>
         </ul>
       </div>
     </div>
@@ -88,7 +88,6 @@
   <section id="formacion">
     <div class="container grid-2">
       <div class="card">
-        <!--h2 data-i18n="h_skills">Habilidades Técnicas</h2-->
         <h2 data-i18n="skills_title">Competencias clave</h2>
         <div class="skills">
           <div class="skill">
@@ -111,10 +110,6 @@
             <div class="label"><span>Git/GitHub</span><span>70%</span></div>
             <div class="bar"><span style="width:70%"></span></div>
           </div>
-          <!--div class="skill">
-            <div class="label"><span>Linux</span><span>60%</span></div>
-            <div class="bar"><span style="width:60%"></span></div>
-          </div-->
         </div>
       </div>
       <div class="card">
@@ -133,22 +128,22 @@
     </div>
   </section>
 
-  <!-- Experiencia Profesional Reciente + Docencia Universitaria -->
+  <!-- Experiencia Profesional + Docencia -->
   <section id="experiencia">
     <div class="container grid-2">
       <div class="card">
         <h2 data-i18n="h_experience">Experiencia Profesional</h2>
         <ul>
-          <li>Analista Funcional – ITC (2023 – Act.)</li>
-          <li>Analista Funcional, Testing QA – UNSJ (2020 – Act.)</li>
+          <li data-i18n="ITC" title="ITC (2023 – 2025)">Analista</li>
+          <li data-i18n="SIED" title="UNSJ (2020 – 2025)">Analista y QA </li>
         </ul>
       </div>
       <div class="card">
         <h2 data-i18n="h_teaching">Docencia</h2>
         <ul>
-          <li>Ayud. de Cátedra, Geometría Analítica - UNSJ (2012)</li>
-          <li>Ayud. de Cátedra, Elementos de Álgebra - UNSJ (2013)</li>
-          <li>Auxiliar Docente – Instituto Genios (2014–2016)</li>
+          <li data-i18n="Insti" title="Instituto Genios (2014–2016)">Instituto Genios (2014–2016)</li>
+          <li data-i18n="EA" title="UNSJ (2013)">Ayud. de Cátedra</li>
+          <li data-i18n="GA" title="UNSJ (2012)">Ayud. de Cátedra</li>
         </ul>
       </div>
     </div>
@@ -160,16 +155,16 @@
       <div class="card">
         <h2 data-i18n="h_sales">Ventas y Atención</h2>
         <ul>
-          <li>Encargada de sucursal - GRIDO Helados (2018–2019)</li>
-          <li>Vendedora - Call Center Movistar Express (2017–2018)</li>
-          <li>Atención al público en comercios (2007–2017)</li>
+          <li data-i18n="grido" title="GRIDO Helados (2018–2019)">Encargada de sucursal</li>
+          <li data-i18n="vendedora" title="Movistar Express (2017–2018)">Call Center</li>
+          <li data-i18n="AP" title="(2007–2017)">Atención al público en comercios</li>
         </ul>
       </div>
       <div class="card">
         <h2 data-i18n="h_other_exp">Otras Experiencias</h2>
         <ul>
-          <li>Auxiliar de Nivel Inicial - Centro “Mi Jelu” (2016)</li>
-          <li>Ayudante de cocina y eventos (2015–2017)</li>
+          <li data-i18n="NI" title="Centro “Mi Jelu” (2016)">Mi Jelu</li>
+          <li data-i18n="AC" title="EUREKA Salón de Eventos (2015–2017)">Salón </li>
         </ul>
       </div>
     </div>
@@ -181,25 +176,25 @@
       <div class="card">
         <h2 data-i18n="h_edu">Educación Complementaria</h2>
         <ul>
-          <li>Diseño de Estrategias desde las IM - CIPAD (2012)</li>
-          <li>Curso Avanzado de Computación - AMIA (2012)</li>
-          <li>Mantenimiento y Reparación de Pc - Curso online (2010)</li>
-          <li>"Problemática de la Enseñanza del Algebra en la Escuela Media" - UNSJ (2008)</li>
+          <li data-i18n="cipad" title="CIPAD, Argentina | 2012"></li>
+          <li data-i18n="amia" title="AMIA, Argentina | 2012"></li>
+          <li data-i18n="mantenimiento" title="RIA, México | 2010"></li>
+          <li data-i18n="curso_unsj" title="UNSJ, Argetina | 2008"></li>
         </ul>
       </div>
       <div class="card">
         <h2 data-i18n="h_edu_mgmt">Educación y Gestión</h2>
         <ul>
-          <li>Teletrabajo - CAMEeducativa (2019)</li>
-          <li>Resolución de conflictos - Online (2019)</li>
-          <li>Conformación de Equipos de Trabajo - Online (2018)</li>
-          <li>El Rol del Preceptor - Instituto CRECER (2015)</li>
+          <li data-i18n="CAME" title="CAMEeducativa, Argentina (2019)"></li>
+          <li data-i18n="resolución" title="IDE, Argentina (2019)"></li>
+          <li data-i18n="equipos" title="IDE, Argentina (2019)"></li>
+          <li data-i18n="precep" title="Inst. CRECER (2015)"></li>
         </ul>
       </div>
     </div>
   </section>
 
-  <!-- Contacto -->
+  <!-- FOOD -->
   <section id="contacto">
     <div class="container" style="max-width:700px">
       <footer>© <span id="year"></span> • María Laura Peralta</footer>
@@ -299,27 +294,46 @@ document.querySelectorAll('.btn[data-link]').forEach(btn => {
       es: {
         name_title: 'María Laura Peralta',
         hero_tagline: 'Técnica en Ciencia de Datos, IA y Desarrollo Web, con experiencia en análisis funcional, control de calidad y soporte en ámbitos académicos y corporativos.',
-        h_education: 'Formación Académica',
-        h_skills: 'Habilidades Técnicas',
-        h_experience: 'Experiencia Profesional',
-        h_teaching: 'Docencia Universitaria',
-        h_sales: 'Ventas y Atención',
-        h_other_exp: 'Otras Experiencias',
-        h_dev: 'Desarrollo y Programación',
-        h_edu: 'Educación Complementaria',
-        h_edu_mgmt: 'Educación y Gestión',
-        h_contact: 'Contacto',
-        contact_pitch: '¿Trabajamos juntos? Escribime y con gusto comparto portfolio y proyectos.',
+        h_education: '🎓 Formación Académica',
+        TCDIA: 'Tecnicatura en Ciencias de Datos e Inteligencia Artificial',
+        TDWAD: 'Tecnicatura en Desarrollo Web y Aplicaciones Digitales',
+        Secundario: 'Secundario Completo',
+        testing: 'TESTING QA',
+        node: 'Node.js',
+        python: 'Fundamentos Python',
+        ui: 'UI/UX',
+        desarrollo: 'Desarrollo Web',
+        back: 'Backend con JS',
+        h_experience: '📈 Experiencia Profesional',
+        ITC: 'Analista Funcional',
+        SIED: 'Analista Funcional y Testing QA',
+        h_teaching: '👩🏻‍🏫 Docencia',
+        GA: 'Ayud. de Cátedra, Geometría Analítica',
+        EA: 'Ayud. de Cátedra, Elementos de Álgebra',
+        Insti: 'Auxiliar Docente Nivel Secundario y Universitario',
+        h_sales: '🤝🏻 Ventas y Atención',
+        grido: 'Encargada de sucursal',
+        vendedora: 'Vendedora por Call Center',
+        AP: 'Atención al público en comercios',
+        h_other_exp: '🙌🏻 Otras Experiencias',
+        NI: 'Auxiliar de Nivel Inicial',
+        AC: 'Ayudante de cocina y eventos',
+        h_edu: '📚 Educación Complementaria',
+        cipad: 'Diseño de Estrategias desde las Inteligencias Múltiples',
+        amia: 'Curso Avanzado de Computación',
+        mantenimiento: 'Mantenimiento y Reparación de Pc',
+        curso_unsj: 'Problemática de la Enseñanza del Algebra en la Escuela Media',
+        h_edu_mgmt: '📖 Educación y Gestión',
+        CAME: 'Teletrabajo',
+        resolución: 'Resolución de conflictos',
+        equipos: 'Conformación de Equipos de Trabajo',
+        precep: 'El Rol del Preceptor',
         btn_download: 'Descargar CV',
         btn_contact: 'Contacto',
-        btn_send: 'Enviar',
-        form_name_ph: 'Tu nombre',
-        form_email_ph: 'Tu email',
-        form_message_ph: 'Tu mensaje',
-        soft_skills: 'Habilidades Blandas',
-        courses: 'Cursos Realizados',
-        portafolio: 'Portafolio',
-        skills_title: 'Competencias clave',
+        soft_skills: '🧠 Habilidades Blandas',
+        courses: '👩🏻‍💻 Cursos Realizados',
+        portafolio: 'Portfolio',
+        skills_title: '🛠️ Competencias clave',
         ss_communication: "Comunicación",
         ss_teamwork: "Trabajo en equipo",
         ss_thinking: "Pensamiento crítico",
@@ -332,27 +346,46 @@ document.querySelectorAll('.btn[data-link]').forEach(btn => {
       en: {
         name_title: 'María Laura Peralta',
         hero_tagline: 'Data Science, AI and Web Development technician with experience in functional analysis, QA and support in academic and corporate settings.',
-        h_education: 'Education',
-        h_skills: 'Technical Skills',
-        h_experience: 'Professional Experience',
-        h_teaching: 'University Teaching',
-        h_sales: 'Sales & Customer Service',
-        h_other_exp: 'Other Experience',
-        h_dev: 'Development & Programming',
-        h_edu: 'Complementary Education',
-        h_edu_mgmt: 'Education & Management',
-        h_contact: 'Contact',
-        contact_pitch: "Shall we work together? Message me and I'll gladly share portfolio and projects.",
+        h_education: '🎓 Education',
+        TCDIA: 'Associate Degree in Data Science and Artificial Intelligence | 2.5-year technical program',
+        TDWAD: 'Associate Degree in Web Development and Digital Applications | 2.5-year technical program',
+        Secundario: 'Finish High School',
+        testing: 'TESTING QA',
+        node: 'Node.js',
+        python: 'Fundamentos Python',
+        ui: 'UI/UX',
+        desarrollo: 'Desarrollo Web',
+        back: 'Backend con JS',
+        h_experience: '📈 Professional Experience',
+        ITC: 'Functional Analyst',
+        SIED: 'Functional Analyst and Quality Assurance',
+        h_teaching: '👩🏻‍🏫 Teaching',
+        GA: 'Teaching Assistant, Analytic Geometry',
+        EA: 'Teaching Assistant, Algebra Fundamentals',
+        Insti: 'Teaching Assistant at Secondary and University Level',
+        h_sales: '🤝🏻 Sales & Customer Service',
+        grido: 'Encargada de sucursal',
+        vendedora: 'Vendedora por Call Center',
+        AP: 'Atención al público en comercios',
+        h_other_exp: '🙌🏻 Other Experience',
+        NI: 'Auxiliar de Nivel Inicial',
+        AC: 'Ayudante de cocina y eventos',
+        h_edu: '📚 Complementary Education',
+        cipad: 'Strategy Design Based on Multiple Intelligences',
+        amia: 'Advanced Computing Course',
+        mantenimiento: 'PC Maintenance and Repair',
+        curso_unsj: 'The Problem of Teaching Algebra in Secondary Education',
+        h_edu_mgmt: '📖 Education & Management',
+        CAME: 'Remote Work',
+        resolución: 'Conflict Resolution',
+        equipos: 'Team Building',
+        precep: 'The Role of the Academic Advisor',
         btn_download: 'Download CV',
         btn_contact: 'Contact',
-        btn_send: 'Send',
-        form_name_ph: 'Your name',
-        form_email_ph: 'Your email',
-        form_message_ph: 'Your message',
-        soft_skills: 'Soft Skills',
-        courses: 'Courses Taken',
+        soft_skills: '🧠 Soft Skills',
+        courses: ' 👩🏻‍💻 Courses Taken',
         portafolio: 'Portfolio',
-        skills_title: 'Key Competencies',
+        skills_title: '🛠️ Key Competencies',
         ss_communication: "Communication",
         ss_teamwork: "Teamwork",
         ss_thinking: "Critical Thinking",
